# numtales

./: .gitignore  README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  README.md  ingest_vector.py  pyproject.toml  search.py
api/config/: config.py
api/corpus/: numtales.json
api/utils/: image_utils.py
front-end/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
front-end/src/: index.html
front-end/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts  story-service.service.ts
