[tool.poetry]
name = "numtales"
version = "0.1.0"
description = ""
authors = ["Tariku T. tarikub@gmail.com"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0"
pymongo = "^4.6"
transformers = "^4.40"
torch = "^2.1"
flask-cors = "^6.0.0"

[project]
name = "numtales"
version = "0.1.0"
description = "Number stories for kids."
authors = [
    {name = "tarikub",email = "tarikub@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
